--- a/index.html
+++ b/index.html
@@ -14,7 +14,12 @@
                 <img src="logo.png" alt="logo" />
             </div>
         </header>
-
+          <select class="" name="">
+            <option value="Rock">Rock</option>
+            <option value="Pop">Pop</option>
+            <option value="Metal">Metal</option>
+            <option value="Jazz">Jazz</option>
+          </select>
         <div class="cds-container container">
 
         </div>
