alla nuova ricerca interrogo nuovamente il database

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
             <option value="Metal">Metal</option>
             <option value="Jazz">Jazz</option>
           </select>
+          <button type="button" name="button">cerca</button>
         <div class="cds-container container">
 
         </div>
