creo funzioni ma non capisco perche non e'preciso con la selezione del select e ho dovuto creare un button cerca

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
             </div>
         </header>
           <select class="" name="">
+            <option value="Azzera">Azzera ricerca</option>
             <option value="Rock">Rock</option>
             <option value="Pop">Pop</option>
             <option value="Metal">Metal</option>
